--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -1,10 +1,9 @@
 <header id="header">
     <nav class="headerNav">
-        <div class="left">LOG0</div>
+        <div class="left"><a class="nav-link" routerLink="/">Log0</a></div>
         <div class="right">
             <a class="nav-link" routerLink="/connexion">Connexion</a>
             <a class="nav-link" routerLink="/mention-legal">Mention Légal</a>
-
         </div>
     </nav>
 </header>
