--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -1,9 +1,14 @@
 <header id="header">
-    <nav class="headerNav">
-        <div class="left"><a class="nav-link" routerLink="/">Log0</a></div>
-        <div class="right">
-            <a class="nav-link" routerLink="/connexion">Connexion</a>
-            <a class="nav-link" routerLink="/mention-legal">Mention Légal</a>
+    <div id="navbar_accueil">
+        <img id="logo" src="../../../assets/images/logo.png">
+
+        <div class="bouton_align">
+            <span class="simple_button" routerLink="/mention-legal">
+                Mentions Légales
+            </span>
+            <span class="green_button" routerLink="/connexion">
+                Connexion
+            </span>
         </div>
-    </nav>
+    </div>
 </header>
