--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -8,6 +8,6 @@
             Mot de passe<br>
             <input type='password' name='password' class='inputLogin_auth'><br><br>
         </div>
-        <button class='green_button_auth'>Connexion</button>
+        <button class='green_button'>Connexion</button>
     </form>
 </div>
