commit avant week-end (map)

--- a/src/app/partials/search-bar-location/search-bar-location.component.html
+++ b/src/app/partials/search-bar-location/search-bar-location.component.html
@@ -1,1 +1,6 @@
-<p>search-bar-location works!</p>
+<div id="search_bar_container">
+    <input id="input_recherche" type="text">
+    <div class="bouton_location">
+        <i class="fi fi-rs-marker"></i>
+    </div>
+</div>
