--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -44,6 +44,8 @@
     margin-left: 10px;
     padding: 0 20px;
     cursor: pointer;
+    border: 2px solid #6FCEAE;
+    
 }
 .green_button:hover{
     background-color: #EDEAEA;
