--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,9 @@
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    overflow: hidden;
+}
 
+.is-active {
+    background-color: yellow;
 }
