auto-completion fini

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,8 @@
+
 <div class="map-container">
-    <div class="map-frame">
-        <div id="map" class="map"></div>
-    </div>
+  <div class="map-frame">
+    <div id="map" class="map"></div>
+  </div>
 </div>
+
+<geoapify-geocoder-autocomplete (placeSelect)="placeSelected($event)" ></geoapify-geocoder-autocomplete>
