--- a/src/app/partials/search-bar-location/search-bar-location.component.css
+++ b/src/app/partials/search-bar-location/search-bar-location.component.css
@@ -11,7 +11,7 @@
     width: 50%;
 }
 
-.input_recherche{
+#input_recherche{
     background-color: white;
     border: none;
     border-radius: 50px 0px 0px 50px ;
@@ -40,3 +40,4 @@
     color: white;
     display: flex;
 }
+
