--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /*IMPORTS ----------------------------------------------------*/
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import "~@geoapify/geocoder-autocomplete/styles/minimal.css";
 
 /*INITIALISATION----------------------------------------------*/
 
