--- a/src/assets/geoapify.css
+++ b/src/assets/geoapify.css
@@ -6,6 +6,8 @@
     line-height: 36px;
     height: 50px;
     font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    
 }
 
 .geoapify-autocomplete-items {
