--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header">
     
     <div id="navbar_accueil">
-        <img id="logo" src="../../../assets/images/logo.png">
+        <img id="logo" routerLink="/" src="../../../assets/images/logo.png">
 
         <div class="bouton_align">
             <span class="simple_button" routerLink="/mention-legal">
