--- a/src/app/partials/filters-bennes/filters-bennes.component.html
+++ b/src/app/partials/filters-bennes/filters-bennes.component.html
@@ -1,1 +1,11 @@
-<p>filters-bennes works!</p>
+<div id="boite_filtres">
+    <h3>Filtres:</h3>
+    <a class="bouton_filtres" href="">Verre</a>
+    <a class="bouton_filtres" href="">Plastique <i class="fi fi-rr-water-bottle"></i></a>
+    <a class="bouton_filtres" href="">Carton</a>
+    <a class="bouton_filtres" href="">Electronique</a>
+    <a class="bouton_filtres" href="">- 5km</a>
+    <a class="bouton_filtres" href="">- 10km</a>
+    <a class="bouton_filtres" href="">- 15km</a>
+    <a class="bouton_filtres" href="">- 20km</a>
+</div>
