--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,8 +1,7 @@
 /*NAVBAR ------------------------------------------------------*/
 
 #navbar_accueil{
-    background-color: #EDEAEA;
-    opacity: 84%;
+    background-color: #edeaeaa9;
     width: 98%;
     height: 80px;
     z-index: 1;
@@ -13,12 +12,15 @@
     border-radius: 17px;
     display: flex;
     justify-content: space-between;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; 
 }
 #logo{
-    height: 100%;
+    height: 73%;
     width: auto;
     margin-left: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+    cursor: pointer;
 }
 
 /* LES BOUTONS ----------------------------------------------- */
