--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,8 +5,10 @@
     <input type="checkbox" id="drop" />
 
     <ul class="menu bouton_align">
+        <li><a href="#modal-one" class="btn openbtn">Déclarer un problème</a></li>
         <li><a class="simple_button" routerLink="/mention-legal">Mentions Légales</a></li>
-        <li><a class="green_button" routerLink="/connexion">Connexion</a></li>
+        <li><a class="green_button" routerLink="/connexion">Connexion</a></li>    
+        
     </ul>
 
 </nav>
