--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
+<div id="app"  [ngClass]="colorMode">
 
+<app-header (newThemeEvent)="getTheme($event)"></app-header>
 <router-outlet></router-outlet>
+
+</div>
