--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -58,10 +58,15 @@ p {
 	display: flex;
   justify-content: space-between;
   position: fixed;
+  
+}
+
+.light .flex-container{
+  background-color: red;
 }
 
 nav { 
-    background-color: #edeaeaa9;
+    
     width: 98%;
     height: 80px;
     z-index: 1;
@@ -73,6 +78,13 @@ nav {
     display: flex;
     justify-content: space-between;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; 
+}
+
+.dark #mainHeader {
+  background-color: #000000a9;
+}
+.light  #mainHeader{
+  background-color: #edeaeaa9;
 }
 
 #logo{
