--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,11 @@
-<nav class="flex-container">
+<nav id="mainHeader" class="flex-container" >
     <img id="logo" routerLink="/" src="../../../assets/images/logo.png">
 
     <label for="drop" class="toggle">☰</label>
     <input type="checkbox" id="drop" />
 
     <ul class="menu bouton_align">
+        <li><button (click)="toggleTheme()">{{theme}}</button></li>
         <li><a href="#modal-one" class="btn openbtn">Déclarer un problème</a></li>
         <li><a class="simple_button" routerLink="/mention-legal">Mentions Légales</a></li>
         <li><a class="green_button" routerLink="/connexion">Connexion</a></li>    
