--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,4 +1,12 @@
 
+.clear:before, .clear:after {content: ' ';display: table}
+.clear:after { clear : both }
+.clear {*zoom: 1;}
+
+*{
+    margin:0;padding: 0;
+    box-sizing: border-box ;
+}
 
 body {
     margin: 0;
@@ -6,5 +14,9 @@ body {
     overflow-x: hidden;
     max-height: 100vh;
 
+}
+
+#app {
+    height: 100vh;
 }
 
