--- a/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.html
+++ b/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.html
@@ -1,2 +1,5 @@
-<app-nav-bar-admin></app-nav-bar-admin>
 <p>nav-bar-admin works!</p>
+<a routerLink="/admin/planning">planning</a>
+<a routerLink="/admin/trajet">trajet</a>
+<a routerLink="/admin/declaration">déclarations</a>
+<a routerLink="/admin/eboueur">eboueurs</a>
