--- a/src/app/partials/filters-bennes/filters-bennes.component.css
+++ b/src/app/partials/filters-bennes/filters-bennes.component.css
@@ -56,7 +56,7 @@ background-color: rgba(233, 229, 251, 0.747);
         top: 25%;
         left: -190px;
         transition: all 0.15s ease-out 0;
-        width: 8rem;
+        width: 167px;
         padding: 1.5em;
         background: #ffffff;
     }
