--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -7,7 +7,7 @@
 
 <div id="search_bar_container">
     <geoapify-geocoder-autocomplete placeholder="Entrez votre adresse ici" class="input_recherche" (placeSelect)="placeSelected($event)"></geoapify-geocoder-autocomplete>
-    <div class="bouton_location">
+    <div class="bouton_location" (click)="getGeolocation()">
         <i class="fi fi-rs-marker"></i>
     </div>
 </div>
