--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <app-map></app-map>
 <app-filters-bennes></app-filters-bennes>
-<app-declaration-maker></app-declaration-maker>
+<app-declaration></app-declaration>
