--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<app-map></app-map>
-<app-filters-bennes></app-filters-bennes>
+<app-map [filterParam]="currentFilter"></app-map>
+<app-filters-bennes (getFilterBenne)="getFilter($event)"></app-filters-bennes>
 <app-declaration></app-declaration>
