--- a/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.html
+++ b/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.html
@@ -1,5 +1,13 @@
-<p>nav-bar-admin works!</p>
-<a routerLink="/admin/planning">planning</a>
-<a routerLink="/admin/trajet">trajet</a>
-<a routerLink="/admin/declaration">déclarations</a>
-<a routerLink="/admin/eboueur">eboueurs</a>
+<nav class="flex-container">
+    <img id="logo" routerLink="/" src="../../../assets/images/logo.png">
+    <ul class="menu bouton_align">
+        <li><a routerLink="/admin/planning" routerLinkActive="active-link">Planning</a></li>
+        <li><a routerLink="/admin/trajet" routerLinkActive="active-link">Trajet</a></li>
+        <li><a routerLink="/admin/declaration" routerLinkActive="active-link">Déclarations</a></li>
+        <li><a routerLink="/admin/eboueurs" routerLinkActive="active-link">Eboueurs</a></li>
+    </ul>
+    <span class="spanSvg">
+        <img class='svg_NavBarAdmin' src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Ei-gear.svg">
+        <img class='svg_NavBarAdmin' src="../../../assets/images/exit-logout-2859 (1).svg" />
+    </span>
+</nav>
